--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,6 +1,7 @@
 .card-panel
 {
     text-align: center;
+    /*background-image: url(../assests/images/food.jpg);/*New*/
     color:white;
     font-style: oblique;
     font-stretch: expanded;
@@ -8,6 +9,15 @@
     font-family: 'Times New Roman', Times, serif;
     height:100px;
 
+}
+
+div.header {
+    text-align: center;
+    width: 100%;
+    height: 10%;
+    background-image: url("../images/food.jpg");
+    background-repeat: no-repeat;
+    color: white;
 }
 
 .btn{
