--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -3,40 +3,26 @@
 /* font-family: 'Lato', sans-serif;
 font-family: 'Raleway', sans-serif; */
 
-/* .card-panel{
-    text-align: center;
-    background-image: url(../assests/images/foodWithLogo.jpg);
-    /color:white;
-    font-style: oblique;
-    font-stretch: expanded;
-    background-color:grey;
-    font-family: 'Times New Roman', Times, serif;
-    height:100px;
-
-} */
-
 div.container {
     width: 960px;
 }
 
-.img {
+.foodImg {
     width: 100%;
     height: 100%;
     box-shadow: 1px 1px 7px black;
-
 }
 
 .table {
     margin: auto;
-    width: 30% !important;
+    width: 40% !important;
 }
 
 .btn{
-    background-color:white;
-    color: rgb(44, 43, 43);
+    /* background-color:white; */
+    color:rgb(32, 32, 32);
     font-family: 'Lato', sans-serif;
 }
-
 
 /* table, #search, #zipcode, #restaurants,#recipes{ */
  .form-control, .table  {
@@ -44,17 +30,38 @@ div.container {
     font-family: 'Lato', sans-serif;
 }
 
-#restaurants, #recipes, table{
-    padding: 5px;
-    margin-left: 35px;
-    margin-right: 45px;
-    margin-top:20px;
+p{
+    font-weight: bold;
+    font-size: 12px;
+}
+
+#search::placeholder, #zip::placeholder {
+    color: rgb(83, 81, 80);
 }
 
 form{
     margin:20px;
 }
-.table {
-    margin: auto;
-    width: 30% !important; 
- }
+
+div.outPut {
+    text-align: center;
+}
+
+/* Responsive Adjustment for Medium to Small Screen */
+@media only screen and (max-width: 820px) {
+    div.container {
+        width: 100%;
+    }
+  }
+
+  @media only screen and (max-width: 580px) {
+    .table {
+        margin: auto;
+        width: 60% !important;
+        display: none;
+    }
+    div.outPut {
+    text-align: center;
+    }
+ 
+  } 
