--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -36,13 +36,14 @@ div.container {
     font-weight: bold;
     font-size: 18px;
     font-family: 'Lato', sans-serif;
-    text-transform: none;
+    text-decoration: none;
 }
 
 p{
     font-weight: normal;
     font-size: 14px;
     font-family: 'Lato', sans-serif;
+    text-decoration: underline;
 }
 
 a:link {
